feat: add sample articles in batch [#96] (#100)